@@ -41,7 +41,6 @@ import javax.net.ServerSocketFactory;
 
 import org.jboss.as.process.logging.ProcessLogger;
 import org.jboss.as.process.protocol.ProtocolServer;
-import org.wildfly.security.manager.action.GetAccessControlContextAction;
 import org.jboss.as.version.ProductConfig;
 import org.jboss.as.version.Version;
 import org.jboss.logging.MDC;
@@ -49,6 +48,7 @@ import org.jboss.logmanager.handlers.ConsoleHandler;
 import org.jboss.modules.Module;
 import org.jboss.threads.JBossThreadFactory;
 import org.wildfly.security.manager.WildFlySecurityManager;
+import org.wildfly.security.manager.action.GetAccessControlContextAction;
 
 /**
  * The main entry point for the process controller.
@@ -97,6 +97,7 @@ public final class Main {
         // -jar is jboss-modules.jar in jboss-home
         // log config should be fixed loc
 
+        boolean javaSecurityManager = false;
         OUT: for (int i = 0; i < args.length; i++) {
             String arg = args[i];
             if ("-jvm".equals(arg)) {
@@ -149,6 +150,9 @@ public final class Main {
                         i += pcSocketConfig.getArgIncrement();
                     } else {
                         addJavaOption(arg, javaOptions);
+                        if (arg.startsWith("-Djava.security.manager")) {
+                            javaSecurityManager = true;
+                        }
                     }
                 }
                 break OUT;
@@ -217,6 +221,13 @@ public final class Main {
         initialCommand.add(bootModule);
         initialCommand.add("-mp");  // Repeat the module path so HostController's Main sees it
         initialCommand.add(modulePath);
+        if (System.getSecurityManager() != null && !javaSecurityManager){
+            //If -Djava.security.manager was not used and we have a security manager that means that one of the jboss modules
+            //options -secmgr or -secmgrmodule were used, in which case we propagate -secmgr
+
+            //TODO this does not take into account that -secmgrmodule could have been used, there is currently no way to determine that
+            initialCommand.add("-secmgr");
+        }
         initialCommand.add(CommandLineConstants.PROCESS_CONTROLLER_BIND_ADDR);
         initialCommand.add(boundAddress.getAddress().getHostAddress());
         initialCommand.add(CommandLineConstants.PROCESS_CONTROLLER_BIND_PORT);
